01-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ibm-cloud
  labels:
    purpose: demo-ibm-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-ibm-cloud
  template:
    metadata:
      name: demo-ibm-cloud
      labels:
        app: demo-ibm-cloud
    spec:
      containers:
        - name: demo-ibm-cloud
          image: localhost:50000/ms-project/demo-ibm-cloud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
#          readinessProbe:
#            tcpSocket:
#              port: 8080
#            initialDelaySeconds: 5
#            periodSeconds: 10
#          livenessProbe:
#            tcpSocket:
#              port: 8080
#            initialDelaySeconds: 15
#            periodSeconds: 20
