php-apache-loadtest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache-load-test
  labels:
    app: php-apache-load-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-apache-load-test
  template:
    metadata:
      name: php-apache-load-test
      labels:
        app: php-apache-load-test
    spec:
      containers:
        - name: php-apache-load-test
          image: busybox
          command:
            - /bin/sh
            - -c
            - "while true; do wget -q -O- http://php-apache; done"
