external-ip-cname.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-api
subsets:
  - addresses:
      - ip: 123.123.123.123
      - ip: 134.134.134.134
    ports:
      - port: 80
