external-ip-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: externalname
spec:
  type: ExternalName
  externalName: api.example.com
  ports:
    - port: 80
