external-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ip
spec:
  ports:
    - port: 80
      protocol: TCP
