nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-example
  labels:
    run: deployment-example
spec:
  ports:
    - port: 80
  selector:
    run: deployment-example
