openid-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openid-svc
spec:
  type: LoadBalancer
  clusterIP: 10.0.150.240
  loadBalancerIP: 80.15.25.20 # Depends on whether the cloud provider allows it
  selector:
    app: openid
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
