php-apache-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: php-apache
#  type: LoadBalancer
#  loadBalancerIP: "php-apache.test.com"
